Fixed overflow x bug in calendr event list

--- a/plannr/static/css/main.css
+++ b/plannr/static/css/main.css
@@ -589,6 +589,7 @@ img.logo-resize {
     border-radius: 5px;
     border: 1px solid #0066ff;
     padding: 10px;
+    max-width: 25vw;
 }
 
 .eventAdder{
